# logix-type

./: Cargo.toml  README.md  code-coverage.sh  deny.toml
derive/: Cargo.toml
derive/src/: derive_enum.rs  derive_struct.rs  lib.rs
src/: error.rs  lib.rs  loader.rs  parser.rs  span.rs  token.rs  type_trait.rs
src/action/: mod.rs
src/parser/: delimited.rs  mod.rs
src/string/: esc.rs  mod.rs  txt.rs
src/token/: comment.rs  mod.rs  parse.rs  string.rs
src/token/parse/: mod.rs  string.rs
src/token/string/: mod.rs  str_lit.rs
src/type_trait/: impl_trait.rs  mod.rs
src/types/: array.rs  data.rs  executable_path.rs  map.rs  mod.rs  string.rs  valid_path.rs
tests/: all-types.rs  array.rs  error_tests.rs  errors.rs  valid_path.rs
tests/errors/: array.rs  comments.rs  escape_str.rs  fs_issues.rs  impl_trait.rs  include_action.rs  mod.rs  stray_token.rs  string_lit.rs  tagged_str.rs  valid_paths.rs
tests/include/: all-types.logix  text-file.txt
xtask/: Cargo.toml
xtask/src/: main.rs
