[package]
name = "logix-type"
version.workspace = true
description = "Provides the `LogixType` trait and the parser for `.logix` files, aimed at enabling easy-to-read-and-write configurations for `logix`."
repository.workspace = true
edition.workspace = true
authors.workspace = true
readme = "README.md"
license.workspace = true
categories = ["parsing", "config", "parser-implementations"]

[dependencies]
bstr = "1.9.1"
indexmap = "2.2.6"
logix-type-derive = { version = "0.8.0", path = "derive" }
logix-vfs = "0.7.0"
owo-colors = { version = "4.0.0", features = ["alloc"] }
smol_str = "0.2.1"
textwrap = "0.16.1"
thiserror = "1.0.58"
which = "6.0.1"

[dev-dependencies]
strip-ansi-escapes = "0.2.0"
tempfile = "3.10.1"

[workspace]
members = [
  "derive",
  "xtask",
]

[workspace.package]
version = "0.8.1"
authors = [
  "Bjørn Ove Hay Andersen <bjrnove@gmail.com>",
  "Gigantos <gigantos@gigantos.net>",
]
license = "MPL-2.0"
edition = "2021"
repository = "https://github.com/logix-tool/logix-type"
