[package]
name = "logix-type-derive"
version = "0.4.2"
description = "Derive crate for logix-type, not intended to be used by anyone directly"
repository = "https://github.com/logix-tool/logix-type"
edition = "2021"
authors = [
  "Bjørn Ove Hay Andersen <bjrnove@gmail.com>",
  "Gigantos <gigantos@gigantos.net>",
]
license = "MPL-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = "2.0.48"
