[package]
name = "logix-type-derive"
version.workspace = true
description = "Derive crate for logix-type, not intended to be used by anyone directly"
repository = "https://github.com/logix-tool/logix-type"
edition = "2021"
authors.workspace = true
license = "MPL-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = "2.0.55"
