[package]
name = "logix-type-derive"
version.workspace = true
description = "Derive crate for logix-type, not intended to be used by anyone directly"
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = "2.0.55"
